[package]
name = "sobol-sensitivity-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tmp"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
ndarray = {version = "0.15.0", features = ["rayon"]}
numpy = "0.17.2"
dict_derive = "0.4.0"
statrs = "0.16.0"